Temporary fix for z-index and overflow scroll conflict

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -118,7 +118,7 @@ body {
 		white-space: nowrap;
 		width: 100%;
 		overflow: scroll;
-		z-index: -1;
+		//z-index: -1;
 	}
 
 	/* UNIVERSAL FLEX SETTINGS */
@@ -245,6 +245,10 @@ body {
 			background: #ccc;
 			color: black;
 		}
+	}
+
+	.MathJax {
+		color: white;
 	}
 }
 
